# cppstatus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppstatus.cpp
src/: block.hpp  callbacks.cpp  configuration.hpp  main.cpp  status.cpp  status.hpp
